Change the way to store logs during test case execution.

--- a/tests/logging_config.ini
+++ b/tests/logging_config.ini
@@ -2,14 +2,14 @@
 keys=root
 
 [handlers]
-keys=console_handler, file_handler, sqlite_handler
+keys=console_handler, file_handler, test_handler
 
 [formatters]
 keys=console_formatter, file_formatter
 
 [logger_root]
 level=DEBUG
-handlers=console_handler, file_handler, sqlite_handler
+handlers=console_handler, file_handler, test_handler
 
 [handler_console_handler]
 class=logging.StreamHandler
@@ -23,10 +23,11 @@ args=('%(logfilepath)s', 'a', 20000000, 200, 'utf-8')
 level=DEBUG
 formatter=file_formatter
 
-[handler_sqlite_handler]
-class=SQLiteTestRunner.SQLiteHandler
-args=('%(logdbpath)s',)
+[handler_test_handler]
+class=SQLiteTestRunner.TestHandler
+args=()
 level=DEBUG
+formatter=file_formatter
 
 [formatter_console_formatter]
 format=%(asctime)s - [%(levelname)s][%(processName)s][%(module)s]: %(message)s
